[avc_exp] idct4 - show dynamic range (max value) in each step of the h264 4x4-DCT

--- a/avc_exp/Makefile
+++ b/avc_exp/Makefile
@@ -3,11 +3,11 @@ INCLUDES = $(LIBSIMDIRS)
 LIBSIM = $(LIBSIMDIRS)/libsim.a
 
 CC = gcc
-CFLAGS = -c -O3
+CFLAGS = -c -O3 -std=c99
 LIBS = -lm
 
 TMPDIR = mk.tmp
-BINSRCS = avc_exp.c cabac.c 
+BINSRCS = avc_exp.c cabac.c idct4_dyn.c
 BINOBJS = $(BINSRCS:%.c=$(TMPDIR)/%.o)
 OUTBIN = avcexp
 
